Adding tools and local-server

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>WebGL Sandbox: Maze</title>
+    <title>Web Doom Lite</title>
 
     <link rel="stylesheet" href="../common/style.css" type="text/css" />
     <link rel="shortcut icon" href="../common/icon.png" type="image/png" />
