Fix stylesheet loading

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Web Doom Lite</title>
 
-    <link rel="stylesheet" href="../common/style.css" type="text/css" />
-    <link rel="shortcut icon" href="../common/icon.png" type="image/png" />
+    <link rel="stylesheet" href="common/style.css" type="text/css" />
+    <link rel="shortcut icon" href="common/icon.png" type="image/png" />
     <script src="src/main.mjs" type="module"></script>
   </head>
 
