--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div id="overlay">
       Web Doom Lite v<span id="version"></span>
       <br />
-      <br />
       To move use WASD keys or click/touch screen edge
+      <br />
+      Project: <a href="https://github.com/benc-uk/doom-lite">github.com/benc-uk/doom-lite</a>
     </div>
   </body>
 </html>
