--- a/editor/index.html
+++ b/editor/index.html
@@ -6,12 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Level Editor</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="./app.mjs" type="module"></script>
+    <script src="./editor.js" type="module"></script>
   </head>
+
   <body>
     <div id="container">
-      <canvas id="canvas" width="1000" height="700"></canvas>
-      <div id="output">HELLO</div>
+      <div>
+        <button onClick="newMap()">NEW MAP</button>
+        <button onClick="importMap()">IMPORT MAP</button>
+        <button onClick="exportMap()">EXPORT MAP</button>
+        &nbsp;|&nbsp;
+        <button onClick="setMode('addwall')">ADD WALL</button>
+        <button onClick="setMode('move')">MOVE</button>
+        <button onClick="setMode('delete')">DELETE</button>
+        <button onClick="setMode('player')">PLAYER START</button>
+      </div>
+
+      <canvas id="canvas" width="500" height="350"></canvas>
     </div>
+    <img src="player.png" id="player" />
   </body>
 </html>
