meta header meh 💤

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Web Doom Lite</title>
 
+    <title>Web Doom Lite</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="common/style.css" type="text/css" />
     <link rel="shortcut icon" href="common/icon.png" type="image/png" />
     <script src="src/main.mjs" type="module"></script>
