Refactored all datastructs + editor 🤯

--- a/editor/index.html
+++ b/editor/index.html
@@ -12,14 +12,12 @@
   <body>
     <div id="container">
       <div>
+        <span id="info"></span>
         <button onClick="newMap()">NEW MAP</button>
         <button onClick="importMap()">IMPORT MAP</button>
         <button onClick="exportMap()">EXPORT MAP</button>
         &nbsp;|&nbsp;
-        <button onClick="setMode('addwall')">ADD WALL</button>
-        <button onClick="setMode('move')">MOVE</button>
-        <button onClick="setMode('delete')">DELETE</button>
-        <button onClick="setMode('player')">PLAYER START</button>
+        <button onClick="setMode('drawsector')">DRAW SECTOR</button>
       </div>
 
       <div id="main">
