Major overhaul of world geom

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="common/style.css" type="text/css" />
     <link rel="shortcut icon" href="common/icon.png" type="image/png" />
     <script src="src/main.mjs" type="module"></script>
+    <script src="https://unpkg.com/earcut@2.2.4/dist/earcut.min.js"></script>
   </head>
 
   <body>
