Some minor optimizations 🪄

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="common/style.css" type="text/css" />
     <link rel="shortcut icon" href="common/icon.png" type="image/png" />
     <script src="src/main.mjs" type="module"></script>
+
+    <!-- Unable to find an ESM version of earcut anywhere, so have to include it here -->
     <script src="https://unpkg.com/earcut@2.2.4/dist/earcut.min.js"></script>
   </head>
 
