Texture loading and other improvements 🍰

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <body>
     <canvas></canvas>
+    <div id="loading">🚀 Loading...</div>
     <div id="overlay">
       Web Doom Lite v<span id="version"></span>
       <br />
