Refactor and code structure 🏗️

--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
 
     <title>Web Doom Lite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="common/style.css" type="text/css" />
-    <link rel="shortcut icon" href="common/icon.png" type="image/png" />
+    <link rel="stylesheet" href="public/style.css" type="text/css" />
+    <link rel="shortcut icon" href="public/icon.png" type="image/png" />
     <script src="src/main.mjs" type="module"></script>
-
-    <!-- Unable to find an ESM version of earcut anywhere, so have to include it here -->
-    <script src="https://unpkg.com/earcut@2.2.4/dist/earcut.min.js"></script>
   </head>
 
   <body>
